--- a/estilos.css
+++ b/estilos.css
@@ -4,11 +4,20 @@
 html, body {
 	height:100%;
 }
+
+* {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+
 body {
 	margin:0;
 	font-family: 'robotolight';
 	font-size:12px;
-	background:url(images/fondoLogo.gif) center no-repeat #e6e6e6;
+	background:url(images/fondoLogo.gif) center 200px no-repeat #e6e6e6;
 }
 
 strong {
@@ -78,14 +87,16 @@ strong {
 	font-size:1.8em;
 	transition: all 0.2s;
 	-webkit-transition:  all 0.2s;
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
 }
-.botonSeccion:hover {
+.botonSeccionHover {
 	background-color:#57eb84;
 }
 .botonSeccion2 {
 	background-color:#64cbee;
 }
-.botonSeccion2:hover {
+.botonSeccion2Hover {
 	background-color:#6eecff;
 }
 .botonSeccion .icono {
@@ -99,6 +110,9 @@ strong {
 
 .contenidoSeccion {
 	overflow:hidden;
+	
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
 	
 	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
 	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
@@ -114,7 +128,7 @@ strong {
 }
 
 .contenidoSeccion .container {
-	padding:47px  30px 30px 30px;
+	padding:40px  30px 30px 30px;
 }
 
 .fondoPicoVerde {
@@ -225,6 +239,8 @@ strong {
 	display:inline-block;
 	transition: all 0.2s;
 	-webkit-transition:  all 0.2s;
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
 }
 .botonGenericoVerde {
 	background-color:#48c26d;
@@ -281,7 +297,8 @@ strong {
 	vertical-align:middle;
 	font-size:1.5em;
 	padding:8px 15px;
-	width:95%;
+	box-sizing:border-box;
+	width:100%;
 	margin-bottom:10px;
 	background:#e6e6e6;
 	border:none;
@@ -305,4 +322,88 @@ strong {
 
 input {
 	border:none;
+}
+
+#seccionTwitter iframe, #seccionFacebook iframe {
+	display:block;
+	width:100% !important;
+}
+
+
+@media screen and (max-width: 550px) {
+	.calendario {
+		width:80px;
+		display:block;
+		margin-bottom:10px;
+	}
+	.textoEvento {
+		width:auto;
+		display:block;
+	}
+	.cell {
+		display:block;
+		margin-bottom:10px;
+		width:auto;
+		border:none !important;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.container {
+		padding:0 10px;
+	}
+	.contenidoSeccion .container {
+		padding:40px 15px 30px;
+	}
+	img, .botonSeccion .icono {
+		-ms-transform: scale(0.8);
+		-webkit-transform: scale(0.8);
+		transform: scale(0.8);
+		transform-origin:0 50%;
+		-ms-transform-origin:0 50%;
+		-webkit-transform-origin:0 50%;
+	}
+	#fotoComunidad {
+		-ms-transform: scale(1); /* IE 9 */
+		-webkit-transform: scale(1); /* Chrome, Safari, Opera */
+		transform: scale(1);
+	}
+	.lugar {
+		background-size:35px auto;
+	}
+	.fecha {
+		background-size:45px auto;
+		padding:15px 15px 15px 60px;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	body {
+		font-size:8px;
+	}
+	#top {
+		height:auto;
+		padding-bottom:30px;
+	}
+	#top .logo {
+		float:none;
+		display:block;
+		padding-top:30px;
+		margin-top:0px;
+	}
+	#top .right {
+		float:none;
+		display:block;
+		text-align:left;
+	}
+	#top .right img {
+		display:inline-block;
+	}
+	#top .right #botonLogin {
+		float:right;
+		margin-top:8px;
+	}
+	.botonSeccion {
+		background-size:30px auto;
+	}
 }
