--- a/estilos.css
+++ b/estilos.css
@@ -131,6 +131,29 @@ strong {
 	padding:40px  30px 30px 30px;
 }
 
+#seccionProximosEventos .container {
+	padding-top:0;
+	margin-right:30px;
+	margin-top:40px;
+	overflow-y:scroll;
+	overflow-x:hidden;
+	
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
+	
+	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
+	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-moz-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-o-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005); /* custom */
+
+	-webkit-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
+	-webkit-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-moz-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-o-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005); /* custom */
+}
+
 .fondoPicoVerde {
 	background:url(images/seccionFondoPicoVerde.gif) top left no-repeat #FFF;
 }
@@ -140,6 +163,54 @@ strong {
 
 #fotoComunidad {
 	width:100%;
+}
+
+
+#proximosEventos {
+	display:block;
+	position: absolute;
+	z-index:2;
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
+	
+	padding-bottom:20px;
+	
+	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
+	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-moz-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-o-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005); /* custom */
+
+	-webkit-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
+	-webkit-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-moz-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-o-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005); /* custom */
+}
+.eventoMasInfo {
+	position: absolute;
+	z-index:1;
+	opacity:0;
+	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
+	
+	padding-bottom:20px;
+	
+	transform: translate(500px,0);
+	-moz-transform: translate(500px,0);
+	-webkit-transform: translate(500px,0);
+	
+	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
+	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-moz-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-o-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005); /* custom */
+
+	-webkit-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
+	-webkit-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-moz-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	-o-transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005);
+	transition-timing-function: cubic-bezier(0.665, 0.010, 0.325, 1.005); /* custom */
 }
 
 .calendario {
@@ -184,7 +255,7 @@ strong {
 	line-height:1.1em;
 }
 
-.lugarFecha {
+.lugarFecha, .speakers {
 	display: table;
 	width:100%;
 	margin-top:20px;
@@ -194,7 +265,6 @@ strong {
 }
 .cell {
 	display: table-cell;
-	width:50%;
 }
 .lugar {
 	color:#FFF;
@@ -222,10 +292,79 @@ strong {
 	padding-left:80px;
 	line-height:1.1em;
 }
+.speaker {
+	color:#37414d;
+	padding:15px;
+	border:7px solid #ffffff;
+	font-size:1em;
+	font-family: 'robotoregular';
+	line-height:1.2em;
+	background:#e6e6e6;
+	vertical-align:middle;
+	padding:10px;
+}
+.speaker img {
+	display:inline-block;
+	vertical-align: middle;
+	box-sizing:border-box;
+	margin-right:3%;
+	width:20%;
+	max-height:90px;
+}
+.speaker .txt {
+	display:inline-block;
+	vertical-align: middle;
+	box-sizing:border-box;
+	width:75%;
+}
+.speaker .nombre {
+	color:#00a1d6;
+	font-size:1.3em;
+	line-height:1.1em;
+	margin-top:5px;
+}
 .botonMasInfo {
 	text-align:right;
 	display:block;
 	margin-top:20px;
+}
+
+.botonVolver {
+	text-align: left;
+	display:block;
+	margin-bottom:20px;
+}
+
+.agendaTitulo {
+	background:#64cbee;
+	font-size:1.5em;
+	color: #FFF;
+	text-align:center;
+	padding:5px 0;
+	margin-top:20px;
+	text-transform:uppercase;
+}
+
+.agenda {
+	background:#e6e6e6;
+	display: table;
+	width:100%;
+	box-sizing:border-box;
+	padding:5px;
+}
+.agenda .cell{
+	padding:5px 10px;
+	background:#FFF;
+	font-size:1.3em;
+}
+.agenda .hora {
+	color:#64cbee;
+	text-align:right;
+	font-family: 'robotomedium';
+	width:20%;
+}
+.agenda .cell p {
+	margin: 0 0 10px 0;
 }
 
 .botonGenerico, .botonGenericoVerde {
@@ -275,12 +414,11 @@ strong {
 }
 
 #txtRes{
-	display:inline-block;
+	display:block;
 	margin-bottom:10px;
 	color: #FF0000;
-	margin-left: 150px;
-	font-size: 12px;
-	padding:8px 15px;
+	padding:8px 0;
+	font-size:1.3em;
 }
 #invitarForm {
 	text-align:right;
@@ -345,6 +483,18 @@ input {
 		margin-bottom:10px;
 		width:auto;
 		border:none !important;
+	}
+	.agenda .cell {
+		display:block;
+		margin-bottom: 5px;
+	}
+	.agenda .hora {
+		margin:0 !important;
+		width:auto !important;
+		display:block !important;
+		text-align:left;
+		padding:8px 10px;
+		padding-bottom:0;
 	}
 }
 
