--- a/estilos.css
+++ b/estilos.css
@@ -64,7 +64,7 @@ strong {
 	background:#ffffff;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
-	color:#808080;
+	color: #333;
 	margin-bottom:8px;
 }
 
@@ -127,8 +127,7 @@ strong {
 	padding-top:0;
 	margin-right:30px;
 	margin-top:40px;
-	overflow-y:scroll;
-	overflow-x:hidden;
+	overflow:scroll;
 	
 	transform: translate3d(0,0,0);
 	-webkit-transform: translate3d(0,0,0);
@@ -186,11 +185,11 @@ strong {
 	transform: translate3d(0,0,0);
 	-webkit-transform: translate3d(0,0,0);
 	
-	padding-bottom:20px;
+	-ms-transform: scale(0); /* IE 9 */
+    -webkit-transform: scale(0); /* Chrome, Safari, Opera */
+    transform: scale(0);
 	
-	transform: translate(500px,0);
-	-moz-transform: translate(500px,0);
-	-webkit-transform: translate(500px,0);
+	padding-bottom:20px;
 	
 	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1); /* older webkit */
 	-webkit-transition: all 500ms cubic-bezier(0.665, 0.010, 0.325, 1.005);
@@ -446,7 +445,7 @@ strong {
 }
 
 .textoGenerico {
-	font-size:1.3em;
+	font-size:1.5em;
 	margin-bottom:20px;
 }
 
