--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -2,9 +2,9 @@
     font-family: 'robotolight';
     src: url('Roboto-Light-webfont.eot');
     src: url('Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Roboto-Light-webfont.svg#robotolight') format('svg'),
-		 url('Roboto-Light-webfont.woff') format('woff'),
-         url('Roboto-Light-webfont.ttf') format('truetype');
+         url('Roboto-Light-webfont.ttf') format('truetype'),
+		 url('Roboto-Light-webfont.svg#robotolight') format('svg'),
+		 url('Roboto-Light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -14,9 +14,9 @@
     font-family: 'robotoregular';
     src: url('Roboto-Regular-webfont.eot');
     src: url('Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('Roboto-Regular-webfont.ttf') format('truetype'),
 		 url('Roboto-Regular-webfont.svg#robotoregular') format('svg'),
-         url('Roboto-Regular-webfont.woff') format('woff'),
-         url('Roboto-Regular-webfont.ttf') format('truetype');
+         url('Roboto-Regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -26,9 +26,9 @@
     font-family: 'robotomedium';
     src: url('Roboto-Medium-webfont.eot');
     src: url('Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('Roboto-Medium-webfont.ttf') format('truetype'),
          url('Roboto-Medium-webfont.svg#robotomedium') format('svg'),
-		 url('Roboto-Medium-webfont.woff') format('woff'),
-         url('Roboto-Medium-webfont.ttf') format('truetype');         
+		 url('Roboto-Medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
